--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css" />
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
         <script src="main.js"></script>
-
     </head>
     <body>
-        <div>
-            <p id="first">hello</p>
-            <div class="text-group">
-                <p>hello</p>
-                <p>hello</p>
+        <div class="main">
+            <div class="main-top">
+                <h1 class="text-login">NAVER</h1>
             </div>
-            <p>hello</p>
-            <p>hello</p>
+            <div class="main-middle-id">
+                <input id="inputId" class="id" type="text" placeholder="   아이디">
+            </div>
+            <div class="main-middle-pw">
+                <input id="inputPw" class="pw" type="text" placeholder="   비밀번호">
+            </div>
+            <div class="main-bottom">
+                <input class="button" type="button" value="로그인" onclick="clickOkButton()">
+            </div>
         </div>
     </body>
 </html>
